Fix a crash when a container used in a foor loop has no content type

BUG:305912